# kumo-comic

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
comics/: __init__.py  exceptions.py
comics/connectors/: __init__.py  truyenqq.py
comics/core/: __init__.py  base_connector.py  connector_manager.py  models.py
comics/engine/: __init__.py  browser.py  downloader.py
comics/utils/: __init__.py  helpers.py
kumo/: __init__.py  cli.py
kumo/connectors/: __init__.py  truyenqq.py
kumo/core/: base_connector.py  models.py
kumo/engine/: __init__.py  browser.py  downloader.py
kumo/utils/: __init__.py  helpers.py  user_agents.py
kumocomic/: __init__.py
kumocomic/connectors/: truyenqq.py
kumocomic/core/: __init__.py  base_connector.py  models.py
kumocomic/utils/: helpers.py
