[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kumocomic"
version = "0.1.0"
description = "A HakuNeko-inspired comic downloader with connector-based architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [ {name = "0xSi23"} ]
keywords = ["manga", "comic", "downloader", "scraper", "crawler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.6",
    "rich>=13.0.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
kumocomic = "kumocomic.cli:main"

[project.urls]
Homepage = "https://github.com/0xSi23/kumo-comic"
Repository = "https://github.com/0xSi23/kumo-comic"

[tool.hatch.build.targets.wheel]
packages = ["kumocomic"]
